--- a/resume.html
+++ b/resume.html
@@ -190,13 +190,14 @@
   <div class="container-fluid pt-4">
     <div class="row">
       <div class="col-md-10">
-        <h3 class="text-dark">Software</h3>
+        <h3 class="text-dark">Software & Programming Knowledge</h3>
           <ul class="text-white">
             <li>ArcMap & ArcPro</li>
             <li>Adobe Illustrator & Adobe Photoshop</li>
-            <li>HTML5/CSS3 & Bootstrap</li>
-            <li>Map Box Studio </li>
-            <li>Basic geocomputing, including Python, GDAL/OGR & ArcPy</li>
+            <li>HTML5/CSS3</li>
+            <li>Bootstrap</li>
+            <li>Map Box Studio</li>
+            <li>Geocomputing, including Python, GDAL/OGR & ArcPy</li>
             <li>Microsoft Office Suite</li>
           </ul>
       </div>
